# pyat

./: .gitignore  .travis.yml  README.rst  mkdeb.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
debian/: changelog  control  rules
pyat/: __init__.py  base.py  sync.py
tests/: sync_tests.py  test_sync.py  util.py
