[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyat"
dynamic = ["version"]
dependencies = ["six"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[[project.authors]]
name = "Stuart Longland"
email = "stuartl@vrt.com.au"

[tool.black]
line-length = 78

[tool.pytest.ini_options]
log_cli = true

[tool.setuptools]
packages = [
	"pyat",
]

[tool.setuptools.dynamic]
version = {attr = "pyat.__version__"}
